attempt 2 at fixing font size problems on mobile safari

--- a/resources/css/markdown2.css
+++ b/resources/css/markdown2.css
@@ -32,7 +32,9 @@
 }
 
 [markdown2] > pre {
-    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
     overflow-x: scroll;
     padding:0.5rem;
     margin-left:5%;
@@ -43,12 +45,10 @@
 }
 
 [markdown2] > pre > code {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
 
 [markdown2] > pre > code > span {
-    -webkit-text-size-adjust: 100%;
     padding-right:2rem;
 }
 
@@ -83,36 +83,29 @@
 }
 
 [markdown2] > pre > code > span {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
 
 [markdown2] > pre > code > span > span {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
 
 [markdown2] > pre > code > span > span > span {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
 
 [markdown2] > pre > code > span > span > span > span {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
 
 [markdown2] > pre > code > span > span > span > span > span  {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
 
 [markdown2] > pre > code > span > span > span > span > span > span {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
 
 [markdown2] > pre > code > span > span > span > span > span > span > span {
-    -webkit-text-size-adjust: 100%;
 	font-family: var( --markdown2-code-font-family);
 }
